# Nassaq

./: .gitignore  .replit  AUDIT_REPORT_DEMO_DATA.md  backend_test.py  build_production.sh  design_guidelines.json  package-lock.json  pyproject.toml  replit.md  start_backend.sh  start_production.sh
.emergent/: summary.txt
attached_assets/: NASSAQ_OS_—_COMPLETE_SYSTEM_TECHNICAL_REFERENCE_1773453201595.docx  NASSAQ_Testing_2_1773477118197.docx  Nassaq_Navigation_1773459294178.docx  Pasted--eslint-src-components-dashboard-SchoolDashboardContent_1773443870545.txt  Pasted-Replit-Plan-Here-s-the-complete-updated-phase-map-with-_1773470409541.txt  Pasted-School-Timetable-Development-Task-School-Timetable-Page_1773456176033.txt  School_Settings__1773459294179.docx  School_Timetable_1773459294180.docx  Teacher_Module_1773521352881.docx  _Nassaq_PRD_-_To_be_orgnized_by_Ahmed_Abdul_Hakim_1773457951051.docx  content-1773440253789.md
backend/: .env  ARCHITECTURE.md  pg_dal.py  requirements.txt  requirements_filtered.txt  seed_curriculum.py  server.py
frontend/: .env  craco.config.js  package-lock.json  package.json  tailwind.config.js
memory/: CHANGELOG.md  FOUNDATION_AUDIT.md  PRD.md  SYSTEM_AUDIT_REPORT.md
test_reports/: iteration_1.json  iteration_10.json  iteration_11.json  iteration_12.json  iteration_13.json  iteration_14.json  iteration_15.json  iteration_16.json  iteration_17.json  iteration_18.json  iteration_19.json  iteration_2.json  iteration_20.json  iteration_21.json  iteration_22.json  iteration_23.json  iteration_24.json  iteration_25.json  iteration_26.json  (+62 more)
(+329 files in other folders)
