[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",
    "bcrypt==4.1.3",
    "dnspython>=2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.110.1",
    "google-genai==1.65.0",
    "google-generativeai==0.8.6",
    "httpx==0.28.1",
    "motor==3.3.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "passlib==1.7.4",
    "pillow==12.1.1",
    "pydantic[email]>=2.12.5",
    "pyjwt==2.11.0",
    "pymongo==4.5.0",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "qrcode==8.2",
    "requests>=2.32.5",
    "starlette==0.37.2",
    "stripe==14.4.0",
    "uvicorn==0.25.0",
    "websockets==16.0",
    "xlsxwriter>=3.2.9",
]
